beta_1.3.2